<resources>
    <string name="app_name">CharitY</string>
    <string name="charityTitle">CharitY</string>
    <string name="login">Login</string>
    <string name="signup">Need Account?</string>
    <string name="menuEditDetails">Edit Details</string>
    <string name="menuLogin">Login</string>
    <string name="menuReport">Reports</string>
    <string name="menuDonate">Donation</string>
    <string name="menuLogout">Logout</string>
    <string name="menuSignup">Signup</string>
    <string name="menuDashboard">Dashboard</string>
    <string name="menuCreate">New Charity</string>
    <string name="dashboardTitle">Dashboard</string>
    <string name="donateButton">Donate</string>
    <string name="PayPal">PayPal</string>
    <string name="Direct">Direct</string>
    <string name="amount">Enter Amount:</string>
    <string name="initialAmount">0</string>
    <string name="amountSoFarLabel">Total so far:</string>
    <string name="reportTitle">Reports</string>
    <string name="defaultAmount">00</string>
    <string name="defaultMethod">N/A</string>
    <string name="filterForDonations">Reports</string>
    <string name="applyFilterText">Show</string>
    <string name="title_activity_signup">Signup</string>
    <string name="registrationInfoLbl">Registration Information</string>
    <string name="signupFirstname">First Name</string>
    <string name="signupLastName">Last Name</string>
    <string name="signupEmail">Email</string>
    <string name="signupPassword">Password</string>
    <string name="signupAge">Age</string>
    <string name="signupAddressLineOne">Address Line 1</string>
    <string name="signupAddressLineTwo">Address Line 2</string>
    <string name="nationality">Nationality</string>
    <string name="nationality_1">Afghanistan</string>
	<string name="nationality_2">Aland Islands</string>
	<string name="nationality_3">Albania</string>
	<string name="nationality_4">Algeria</string>
	<string name="nationality_5">American Samoa</string>
	<string name="nationality_6">Andorra</string>
	<string name="nationality_7">Angola</string>
	<string name="nationality_8">Anguilla</string>
	<string name="nationality_9">Antarctica</string>
	<string name="nationality_10">Antigua and Barbuda</string>
	<string name="nationality_11">Argentina</string>
	<string name="nationality_12">Armenia</string>
	<string name="nationality_13">Aruba</string>
	<string name="nationality_14">Australia</string>
	<string name="nationality_15">Austria</string>
	<string name="nationality_16">Azerbaijan</string>
	<string name="nationality_17">Bahamas</string>
	<string name="nationality_18">Bahrain</string>
	<string name="nationality_19">Bangladesh</string>
	<string name="nationality_20">Barbados</string>
	<string name="nationality_21">Belarus</string>
	<string name="nationality_22">Belgium</string>
	<string name="nationality_23">Belize</string>
	<string name="nationality_24">Benin</string>
	<string name="nationality_25">Bermuda</string>
	<string name="nationality_26">Bhutan</string>
	<string name="nationality_27">Bolivia</string>
	<string name="nationality_28">Bosnia and Herzegovina</string>
	<string name="nationality_29">Botswana</string>
	<string name="nationality_30">Bouvet Island</string>
	<string name="nationality_31">Brazil</string>
	<string name="nationality_32">British Indian Ocean Territory</string>
	<string name="nationality_33">British Virgin Islands</string>
	<string name="nationality_34">Brunei</string>
	<string name="nationality_35">Bulgaria</string>
	<string name="nationality_36">Burkina Faso</string>
	<string name="nationality_37">Burundi</string>
	<string name="nationality_38">Cambodia</string>
	<string name="nationality_39">Cameroon</string>
	<string name="nationality_40">Canada</string>
	<string name="nationality_41">Cape Verde</string>
	<string name="nationality_42">Cayman Islands</string>
	<string name="nationality_43">Central African Republic</string>
	<string name="nationality_44">Chad</string>
    <string name="nationality_45">Chile</string>
	<string name="nationality_46">China</string>
    <string name="nationality_47">Christmas Island</string>
    <string name="nationality_48">Cocos (Keeling) Islands</string>
	<string name="nationality_49">Colombia</string>
	<string name="nationality_50">Congo</string>
	<string name="nationality_51">Cook Islands</string>
	<string name="nationality_52">Costa Rica</string>
	<string name="nationality_53">Croatia</string>
    <string name="nationality_54">Cuba</string>
	<string name="nationality_55">Cyprus</string>
	<string name="nationality_56">Czech Republic</string>
    <string name="nationality_57">Democratic Republic of Congo</string>
	<string name="nationality_58">Denmark</string>
	<string name="nationality_59">Disputed Territory</string>
	<string name="nationality_60">Djibouti</string>
	<string name="nationality_61">Dominica</string>
	<string name="nationality_62">Dominican Republic</string>
	<string name="nationality_63">East Timor</string>
	<string name="nationality_64">Ecuador</string>
	<string name="nationality_65">Egypt</string>
	<string name="nationality_66">El Salvador</string>
	<string name="nationality_67">Equatorial Guinea</string>
	<string name="nationality_68">Eritrea</string>
	<string name="nationality_69">Estonia</string>
    <string name="nationality_70">Ethiopia</string>
	<string name="nationality_71">Falkland Islands</string>
	<string name="nationality_72">Faroe Islands</string>
	<string name="nationality_73">Federated States of Micronesia</string>
	<string name="nationality_74">Fiji</string>
	<string name="nationality_75">Finland</string>
    <string name="nationality_76">France</string>
	<string name="nationality_77">French Guyana</string>
    <string name="nationality_78">French Polynesia</string>
	<string name="nationality_79">French Southern Territories</string>
    <string name="nationality_80">Gabon</string>
	<string name="nationality_81">Gambia</string>
	<string name="nationality_82">Georgia</string>
    <string name="nationality_83">Germany</string>
	<string name="nationality_84">Ghana</string>
	<string name="nationality_85">Gibraltar</string>
	<string name="nationality_86">Greece</string>
	<string name="nationality_87">Greenland</string>
	<string name="nationality_88">Grenada</string>
	<string name="nationality_89">Guadeloupe</string>
	<string name="nationality_90">Guam</string>
	<string name="nationality_91">Guatemala</string>
	<string name="nationality_92">Guinea</string>
	<string name="nationality_93">Guinea-Bissau</string>
	<string name="nationality_94">Guyana</string>
	<string name="nationality_95">Haiti</string>
	<string name="nationality_96">Heard Island and McDonald Islands</string>
	<string name="nationality_97">Honduras</string>
	<string name="nationality_98">Hong Kong</string>
	<string name="nationality_99">Hungary</string>
	<string name="nationality_100">Iceland</string>
	<string name="nationality_101">India</string>
	<string name="nationality_102">Indonesia</string>
	<string name="nationality_103">Iran</string>
	<string name="nationality_104">Iraq</string>
	<string name="nationality_105">Iraq-Saudi Arabia Neutral Zone</string>
	<string name="nationality_106">Ireland</string>
	<string name="nationality_107">Israel</string>
	<string name="nationality_108">Italy</string>
	<string name="nationality_109">Ivory Coast</string>
	<string name="nationality_110">Jamaica</string>
	<string name="nationality_111">Japan</string>
	<string name="nationality_112">Jordan</string>
	<string name="nationality_113">Kazakhstan</string>
	<string name="nationality_114">Kenya</string>
	<string name="nationality_115">Kiribati</string>
	<string name="nationality_116">Kuwait</string>
	<string name="nationality_117">Kyrgyz Republic</string>
	<string name="nationality_118">Laos</string>
	<string name="nationality_119">Latvia</string>
	<string name="nationality_120">Lebanon</string>
	<string name="nationality_121">Lesotho</string>
	<string name="nationality_122">Liberia</string>
	<string name="nationality_123">Libya</string>
	<string name="nationality_124">Liechtenstein</string>
	<string name="nationality_125">Lithuania</string>
	<string name="nationality_126">Luxembourg</string>
	<string name="nationality_127">Macau</string>
	<string name="nationality_128">Macedonia</string>
	<string name="nationality_129">Madagascar</string>
	<string name="nationality_130">Malawi</string>
    <string name="nationality_131">Malaysia</string>
	<string name="nationality_132">Maldives</string>
    <string name="nationality_133">Mali</string>
	<string name="nationality_134">Malta</string>
	<string name="nationality_135">Marshall Islands</string>
	<string name="nationality_136">Martinique</string>
	<string name="nationality_137">Mauritania</string>
	<string name="nationality_138">Mauritius</string>
	<string name="nationality_139">Mayotte</string>
    <string name="nationality_140">Mexico</string>
    <string name="nationality_141">Moldova</string>
	<string name="nationality_142">Monaco</string>
	<string name="nationality_143">Mongolia</string>
	<string name="nationality_144">Montenegro</string>
	<string name="nationality_145">Montserrat</string>
	<string name="nationality_146">Morocco</string>
	<string name="nationality_147">Mozambique</string>
	<string name="nationality_148">Myanmar</string>
	<string name="nationality_149">Namibia</string>
	<string name="nationality_150">Nauru</string>
	<string name="nationality_151">Nepal</string>
	<string name="nationality_152">Netherlands Antilles</string>
    <string name="nationality_153">Netherlands</string>
	<string name="nationality_154">New Caledonia</string>
	<string name="nationality_155">New Zealand</string>
	<string name="nationality_156">Nicaragua</string>
	<string name="nationality_157">Niger</string>
	<string name="nationality_158">Nigeria</string>
	<string name="nationality_159">Niue</string>
	<string name="nationality_160">Norfolk Island</string>
	<string name="nationality_161">North Korea</string>
	<string name="nationality_162">Northern Mariana Islands</string>
	<string name="nationality_163">Norway</string>
	<string name="nationality_164">Oman</string>
	<string name="nationality_165">Pakistan</string>
	<string name="nationality_166">Palau</string>
	<string name="nationality_167">Palestinian Territories</string>
	<string name="nationality_168">Panama</string>
	<string name="nationality_169">Papua New Guinea</string>
	<string name="nationality_170">Paraguay</string>
	<string name="nationality_171">Peru</string>
	<string name="nationality_172">Philippines</string>
	<string name="nationality_173">Pitcairn Islands</string>
	<string name="nationality_174">Poland</string>
	<string name="nationality_175">Portugal</string>
	<string name="nationality_176">Puerto Rico</string>
	<string name="nationality_177">Qatar</string>
	<string name="nationality_178">Reunion</string>
	<string name="nationality_179">Romania</string>
	<string name="nationality_180">Russia</string>
	<string name="nationality_181">Rwanda</string>
	<string name="nationality_182">Saint Helena and Dependencies</string>
	<string name="nationality_183">Saint Kitts &amp; Nevis</string>
	<string name="nationality_184">Saint Lucia</string>
	<string name="nationality_185">Saint Pierre and Miquelon</string>
	<string name="nationality_186">Saint Vincent and the Grenadines</string>
	<string name="nationality_187">Samoa</string>
    <string name="nationality_188">San Marino</string>
	<string name="nationality_189">Sao Tome and Principe</string>
    <string name="region">Region</string>
    <string name="editButton">Edit</string>
    <string name="editInfoLbl">Personal Information</string>
    <string name="defaultFirstName">First Name</string>
    <string name="defaultOffice">Office</string>
    <string name="usericon">User Icon</string>
    <string name="charity_name">Charity Name</string>
    <string name="charity_office">Charity Office</string>
    <string name="charity_amount">Amount</string>
    <string name="charity_method">Method</string>
</resources>