<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/appLayoutTheme"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="10dp" >
    
    <ImageView
        android:id="@+id/donate_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0.03"
        android:src="@drawable/charity_title" />
    
    <TextView
        android:id="@+id/loginTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/whiteColor"
        android:textStyle="bold"
        android:paddingBottom="20dp"
        android:text="@string/registrationInfoLbl"
        android:textColor="@color/darkerYellow"
        android:textSize="7pt" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.22"
        android:padding="0dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:ignore="UselessParent" >

            <LinearLayout
                android:id="@+id/LinearLayout02"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <EditText
                    android:id="@+id/firstName"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/greyColor"
                    android:textSize="7pt"
                    android:textStyle="italic"
                    android:layout_marginRight="5dp"
                    android:hint="@string/signupFirstname"
                    android:inputType="textPersonName"
                    android:paddingTop="10dp"
                    android:textColorHint="@color/darkerYellow" />

                <EditText
                    android:id="@+id/lastName"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/greyColor"
                    android:textSize="7pt"
                    android:textStyle="italic"
                    android:layout_marginBottom="5dp"
                    android:hint="@string/signupLastName"
                    android:inputType="textPersonName"
                    android:paddingTop="10dp"
                    android:textColorHint="@color/darkerYellow" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <EditText
                    android:id="@+id/Age"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textSize="7pt"
                    android:textStyle="italic"
                    android:layout_marginBottom="5dp"
                    android:hint="@string/signupAge"
                    android:textColorHint="@color/darkerYellow"
                    android:inputType="number"
                    android:background="@color/greyColor"
                    android:paddingTop="10dp" />
                 
            </LinearLayout>

            <LinearLayout
                android:id="@+id/LinearLayout01"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <EditText
                    android:id="@+id/Email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="7pt"
                    android:textStyle="italic"
                    android:layout_marginRight="5dp"
                    android:hint="@string/signupEmail"
                    android:background="@color/greyColor"
                    android:inputType="textEmailAddress"
                    android:textColorHint="@color/darkerYellow" />
                
                

                
            </LinearLayout>

            <LinearLayout
                android:id="@+id/LinearLayout03"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <EditText android:id="@+id/Password" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1" android:background="@color/greyColor" android:textSize="7pt" android:textStyle="italic" android:layout_marginBottom="5dp" android:hint="@string/signupPassword" android:textColorHint="@color/darkerYellow" android:inputType="textPassword">
                 
                    <requestFocus />
                </EditText>
                
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <EditText
                    android:id="@+id/AddressLineOne"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="7pt"
                    android:textStyle="italic"
                    android:layout_marginRight="5dp"
                    android:hint="@string/signupAddressLineOne"
                    android:textColorHint="@color/darkerYellow"
                    android:background="@color/greyColor"
                    android:inputType="text" />
   
                <EditText
                    android:id="@+id/AddressLineTwo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="7pt"
                    android:textStyle="italic"
                    android:layout_marginBottom="5dp"
                    android:hint="@string/signupAddressLineTwo"
                    android:textColorHint="@color/darkerYellow"
                    android:background="@color/greyColor"
                    android:inputType="text" />
                
              
            </LinearLayout>

            <LinearLayout
                android:id="@+id/LinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <Spinner
                    android:id="@+id/Nationality"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:entries="@array/nationality_array"
                    android:prompt="@string/nationality" />

                <Spinner
                    android:id="@+id/Region"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:entries="@array/region_array"
                    android:prompt="@string/region" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingTop="10dp" >

                <Button
                    android:id="@+id/register"
                    android:layout_width="92dp"
                    android:layout_height="81dp"
                    android:layout_gravity="center"
                    android:background="@drawable/logo"
                    android:onClick="registerPressed"
                    android:paddingBottom="10dp"
                    android:paddingTop="5dp" />
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>

   

</LinearLayout>