<?xml version="1.0" encoding="utf-8"?>
<!-- CHILD -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout1"
    style="@style/appLayoutTheme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
<TableLayout
    style="@style/appLayoutTheme"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="top"
    android:background="@color/greyColor"
    android:paddingTop="0dip"
    android:stretchColumns="1"
    tools:ignore="UselessParent" >

    <TableRow tools:ignore="UselessParent" >

        <ImageView
            android:id="@+id/image"
            android:layout_width="30dip"
            android:layout_height="30dip"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="15dip"
            android:background="@drawable/user"
            android:textColor="@color/blackColor"
            android:contentDescription="@string/usericon" />

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:paddingTop="0dip"
            android:stretchColumns="1" >

            <TableRow>

                <LinearLayout
                    android:id="@+id/LinearLayout1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/row_name"
                        style="@style/appLayoutTheme"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dip"
                        android:hint="@string/charity_name"
                        android:background="@color/greyColor"
                        android:textColor="@color/darkGreyColor"
                        android:textSize="12sp" />
                       

                </LinearLayout>
            </TableRow>

            <TableRow>

                <LinearLayout
                    android:id="@+id/LinearLayout01"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/row_office"
                        style="@style/appLayoutTheme"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dip"
                        android:hint="@string/charity_office"
                        android:background="@color/greyColor"
                        android:textColor="@color/darkGreyColor"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/row_amount"
                        style="@style/appLayoutTheme"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="33dip"
                        android:layout_marginRight="30dip"
                        android:hint="@string/charity_amount"
                        android:background="@color/greyColor"
                        android:textColor="@color/darkGreyColor"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/row_method"
                        style="@style/appLayoutTheme"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dip"
                        android:hint="@string/charity_method"
                        android:background="@color/greyColor"
                        android:textColor="@color/darkGreyColor"
                        android:textSize="12sp" />

                </LinearLayout>
            </TableRow>
        </TableLayout>
    </TableRow>

</TableLayout>
</RelativeLayout>